[package]
name    = "merkle-sha3"
version = "0.1.0"
authors = [
  "Frederic Jacobs <me@fredericjacobs.com>",
  "Dylan Bourgeois <dtsbourg@gmail.com>",
  "Romain Ruetschi <romain.ruetschi@gmail.com>",
  "Wei Tang <hi@that.world>"
]

description   = "Sha3-Merkle is a fork of merkle.rs, a Merkle tree with support for generation of inclusion proofs, in sha3."
license       = "BSD-3-Clause"
homepage      = "https://github.com/sorpaas/merkle.rs"
repository    = "https://github.com/sorpaas/merkle.rs"

[lib]
name = "merkle"

[dependencies]
rust-crypto = "^0.2"
protobuf = { version = "^1.2.0", optional = true }

[features]
serialization-protobuf = [ "protobuf" ]
